<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ozcanalasalvar.bitcointicker.ui.auth.AuthViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animationCache="true"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.auth.login.LoginActivity">


        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/circle_bg"
            android:backgroundTint="@color/color_third"
            android:padding="5dp"
            android:src="@drawable/money"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/circle_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:selectAllOnFocus="true"
            android:text="@={viewModel.email}"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/circle_bg"
            android:hint="@string/password"
            android:imeActionLabel="Sign in"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="10dp"
            android:selectAllOnFocus="true"
            android:text="@={viewModel.password}"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="70dp">

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/circle_bg"
                android:backgroundTint="@color/black"
                android:onClick="@{() -> viewModel.login()}"
                android:padding="5dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />


        </FrameLayout>

        <TextView
            android:id="@+id/text_view_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:onClick="@{(v) -> viewModel.goToSignUp(v)}"
            android:text="@string/don_t_have_an_account_nregister_here"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/light_grey"
            android:textSize="13sp" />

    </LinearLayout>

</layout>